# ha-dashboard-builder

./: .env.example  .flake8  .gitignore  AGENTS.md  BUGS_AND_ISSUES.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  cache.db  conftest.py  docker-compose.yml  project_roadmap.md  pyproject.toml
.github/workflows/: backend-tests.yml  ci.yml  docker.yml  frontend-tests.yml  quality.yml
.hermes/: hermes_plan.md
.hermes/plans/: 2026-05-07_153800-docker-test.md  2026-05-07_210800-fix-api-mismatches.md  2026-05-08_105000-close-open-issues.md  2026-05-08_105000-entity-search-sidebar.md  2026-05-10_084900-onboarding-auth.md  t_081356e1-plan.md
app/: __init__.py  api.py  cache.py  config.py  entity_discovery.py  ha_client.py  metadata_enricher.py  models.py  state_tracker.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: auth_routes.py  chat_routes.py  dashboard_routes.py  middleware.py  routes.py  schemas.py  settings_routes.py  websocket.py
backend/app/services/: cache_refresh.py  entity_discovery.py  event_listener.py  ha_client.py  llm_service.py  system_prompt.py
backend/tests/: conftest.py  test_dashboard_crud.py  test_entity_discovery.py  test_ha_client.py  test_integration.py
docs/: deployment-guide.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CardConfigModal.tsx  ChatPanel.tsx  ClimateControlWidget.tsx  DashboardCanvas.tsx  DashboardHeader.tsx  EditDashboardModal.tsx  EntityCard.tsx  EntityPickerModal.tsx  EntitySidebar.tsx  ErrorBoundary.tsx  ExportModal.tsx  GridDragDrop.tsx  ImportModal.tsx  Layout.tsx  LightToggleWidget.tsx  LoadingSpinner.tsx  MobileSidebar.tsx  ResponsiveLayout.tsx  SensorWidget.tsx  SettingsModal.tsx  SkeletonCard.tsx  SwitchToggleWidget.tsx  ToastContainer.tsx  TouchDraggable.tsx
frontend/src/hooks/: useAuth.tsx  useDashboard.ts  useEntities.ts  useEntityStates.ts  useToast.tsx  useWebSocket.tsx
frontend/src/pages/: ConnectionForm.tsx  DashboardList.tsx  DashboardView.tsx  LoginPage.tsx  OnboardingWizard.tsx  PreviewPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
frontend/src/utils/: lovelaceExporter.ts  lovelaceImporter.ts
tests/: conftest.py  example_test.py  test_entity_discovery.py  test_ha_client.py  test_websocket.py
