# ---------------------------------------------------------------------------
# Dependencies
# ---------------------------------------------------------------------------

[project]
name = "ha-dashboard-builder"
version = "0.1.0"
description = "Home Assistant Integration API with real-time state updates"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy==2.0.25",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "httpx>=0.28.0",
    "python-dotenv==1.0.0",
    "cryptography>=43.0.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
]

# ---------------------------------------------------------------------------
# Test dependencies
# ---------------------------------------------------------------------------

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx[trio]>=0.28.0",
    "flake8==7.0.0",
    "black==24.2.0",
    "mypy==1.8.0",
]

# ---------------------------------------------------------------------------
# pytest config
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--strict-markers --tb=short -v"
